--- a/ex1-index.html
+++ b/ex1-index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="app">
         <h2>1. Declarative Rendering</h2>
-        <p>Hola! A continuación me gustaría ver el valor de la variable <strong>name</strong></p>
-        <p>Convierte el string dentro de los mostachos en mayúsculas <strong>{{ "quieroSerMayusculas"}}</strong></p>
+        <p>Hola! A continuación me gustaría ver el valor de la variable <strong>{{ name }}</strong></p>
+        <p>Convierte el string dentro de los mostachos en mayúsculas <strong>{{ "quieroSerMayusculas".toUpperCase()}}</strong></p>
         <p>Mi apellido es {{ surname }}, pero sin embargo, no puedo ver el valor de esta variable. ¿Por qué? Pista: mira
             la Console de las herramientas de desarrollo</p>
     </div>
@@ -23,8 +23,11 @@
             setup() {
                 const name = ref('Alexander')
                 const surname = ref('Coplowitz')
+                
                 return {
-                    name
+                    name,
+                    surname,
+                    
                 }
             }
         }).mount('#app')
